--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap"
       rel="stylesheet"
     />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Libre+Bodoni&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="page">
@@ -70,6 +75,15 @@
         </div> -->
       </div>
 
+      <nav id="header">
+        <div class="row middle-xs">
+          <div class="col-xs-6"><div class="header-image"></div></div>
+          <div class="col-xs-6 end-xs">
+            <div class="close"><i class="fa-2x fa-solid fa-bars"></i></div>
+          </div>
+        </div>
+      </nav>
+
       <!-- header -->
 
       <div class="home-header">
@@ -77,7 +91,7 @@
           <div class="row center-xs">
             <div class="col-md-7">
               <div>
-                <h1>Independent <br />CRM Experts</h1>
+                <h1>Lapis <br /></h1>
                 <p>
                   Transform your Sales, Marketing and Customer Services <br />
                   with powerful CRM solutions
@@ -92,9 +106,32 @@
         </div>
       </div>
 
-      <video autoplay muted loop id="myVideo">
-        <source src="rain.mp4" type="video/mp4" />
-      </video>
+      <div class="statistics">
+        <div class="container">
+          <div class="col">
+            <div class="row center-xs">
+              <div class="col-xs-6 col-md-4 center-xs">
+                <div class="statistics__section">
+                  <div class="statistics__number">12</div>
+                  <p>Years active</p>
+                </div>
+              </div>
+              <div class="col-xs-6 col-md-4 center-xs">
+                <div class="statistics__section">
+                  <div class="statistics__number">200</div>
+                  <p>Clients helped</p>
+                </div>
+              </div>
+              <div class="col-xs-6 col-md-4 center-xs">
+                <div class="statistics__section">
+                  <div class="statistics__number">20+</div>
+                  <p>Years of knowledge</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
       <!-- 6 images -->
 
@@ -266,11 +303,11 @@
       <div class="container">
         <div class="row center-xs">
           <div class="col-md-7">
-            <h2>Our Customers</h2>
+            <h2>Community Trust</h2>
             <p>
-              Our mission is to deliver innovative and game changing CRM
-              solutions that deliver remarkable results for our clients. Here’s
-              a snapshot of some of the brands we are proud to work with.
+              Aliqua minim adipisicing eu nostrud excepteur duis culpa proident
+              eiusmod irure. Laborum officia in laborum ut dolore elit tempor.
+              Enim ullamco commodo nostrud incididunt sunt cillum officia.
             </p>
           </div>
         </div>
@@ -283,19 +320,22 @@
       <div class="container">
         <div class="row auto-slider animatable fadeInUp">
           <div class="col-md-12 item">
-            <img src="https://dummyimage.com/300x250/fff/aaa" />
+            <img src="slider1.jpg" />
           </div>
           <div class="col-md-12 item">
-            <img src="https://dummyimage.com/300x250/fff/aaa" />
+            <img src="slider2.png" />
           </div>
           <div class="col-md-12 item">
-            <img src="https://dummyimage.com/300x250/fff/aaa" />
+            <img src="slider3.jpg" />
           </div>
           <div class="col-md-12 item">
-            <img src="https://dummyimage.com/300x250/fff/aaa" />
+            <img src="slide4.png" />
           </div>
           <div class="col-md-12 item">
-            <img src="https://dummyimage.com/300x250/fff/aaa" />
+            <img src="slide4.png" />
+          </div>
+          <div class="col-md-12 item">
+            <img src="slide4.png" />
           </div>
         </div>
       </div>
@@ -513,6 +553,14 @@
       });
       $(".navbar-item").on("click", () => {
         $(".navbar-links").removeClass("mobile-menu-active");
+      });
+      $(window).scroll(function () {
+        var scroll = $(window).scrollTop();
+        if (scroll > 0) {
+          $("#header").addClass("active");
+        } else {
+          $("#header").removeClass("active");
+        }
       });
     });
   </script>
