--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     />
 
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@200;300;400;700;900&display=swap"
       rel="stylesheet"
     />
 
@@ -85,22 +85,107 @@
       </nav>
 
       <!-- header -->
-
-      <div class="home-header">
+      <!-- <div class="hero">
         <div class="container" style="padding: 5rem">
           <div class="row center-xs">
             <div class="col-md-7">
               <div>
                 <h1>Lapis <br /></h1>
                 <p>
-                  Transform your Sales, Marketing and Customer Services <br />
-                  with powerful CRM solutions
+                  low cost, open-ended specialist disability psychotherapy to
+                  anyone with a physical disability or learning disability who
+                  lives in London
                 </p>
                 <button>
                   Get a Quote <i class="fa-solid fa-chevron-right"></i>
                 </button>
               </div>
-              <img src="https://dummyimage.com/500x400/fff/aaa" />
+              <img src="adults.jpg" />
+            </div>
+          </div>
+        </div>
+      </div> -->
+      <div class="home-header hero">
+        <div class="hero__overlay">
+          <div class="container" style="padding: 5rem">
+            <div class="row center-xs">
+              <div class="col-md-7">
+                <h1>Lapis <br /></h1>
+                <p>
+                  Low cost, open-ended specialist disability psychotherapy to
+                  anyone with a physical disability or learning disability who
+                  lives in London
+                </p>
+                <button>Get in touch!</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row middle-xs">
+          <div class="col-md-6">
+            <h2>What we do</h2>
+            <p>
+              LAPIS provides specialist counselling and psychotherapy to people
+              affected by disability and life changing health issues.
+            </p>
+            <p>
+              We help disabled people and their family members/carers who are
+              experiencing anxiety, depression, difficulties in relationships
+              and other psychological health problems.
+            </p>
+            <!-- <button class="secondary-bttn">About us</button> -->
+          </div>
+          <div class="col-md-5 col-md-offset-1 end-xs">
+            <img
+              src="https://as1.ftcdn.net/v2/jpg/01/97/21/68/1000_F_197216881_9nHLLNvwQYPwKb4h6P7shwZon2bqAk1A.jpg"
+            />
+          </div>
+        </div>
+      </div>
+
+      <!-- mission -->
+
+      <div class="mission">
+        <div class="container">
+          <div class="row center-xs">
+            <div class="col-md-7">
+              <h2>
+                Community <br />
+                Involvement
+              </h2>
+              <p>
+                Aliqua minim adipisicing eu nostrud excepteur duis culpa
+                proident eiusmod irure. Laborum officia in laborum ut dolore
+                elit tempor. Enim ullamco commodo nostrud incididunt sunt cillum
+                officia.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- auto slider -->
+
+      <div class="auto-slider-container">
+        <div class="container">
+          <div class="row auto-slider animatable fadeInUp">
+            <div class="col-md-12 item">
+              <img src="slide.png" />
+            </div>
+            <div class="col-md-12 item">
+              <img src="slide2.png" />
+            </div>
+            <div class="col-md-12 item">
+              <img src="slide3.png" />
+            </div>
+            <div class="col-md-12 item">
+              <img src="slide4.png" />
+            </div>
+            <div class="col-md-12 item">
+              <img src="slide5.png" />
             </div>
           </div>
         </div>
@@ -133,9 +218,54 @@
         </div>
       </div>
 
+      <div class="features">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-12">
+              <p class="watermark">We help</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col col-md-5">
+              <h3>Young People</h3>
+              <p>
+                People affected by disability age 5-25 who suffer emotional
+                distress and are afraid of yet another stigma or are not able to
+                access mainstream counselling.
+              </p>
+            </div>
+            <div class="col col-md-5 col-md-offset-2">
+              <h3>Adults</h3>
+              <p>
+                All people affected by disability and physical or sensory
+                impairment. This includes: disabled people and those associated
+                with them, individuals, couples, families and groups.
+              </p>
+            </div>
+            <div class="col col-md-5">
+              <h3>Organisations</h3>
+              <p>
+                Voluntary and statutory organisations which offer services to
+                people affected by disability which need to deal with issues
+                such as stress, challenging behaviour and staff retention,
+                affecting good communication with clients.
+              </p>
+            </div>
+            <div class="col col-md-5 col-md-offset-2">
+              <h3>Disadvantaged groups</h3>
+              <p>
+                Aliqua exercitation mollit magna cillum ullamco culpa
+                reprehenderit. Dolor ea consectetur minim nisi. Fugiat anim
+                nulla id qui consequat.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <!-- 6 images -->
 
-      <div class="six-images">
+      <!-- <div class="six-images">
         <div class="container">
           <div class="row between-xs">
             <div class="col-xs-6 col-md-4 col-lg-2">
@@ -158,7 +288,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <!-- slider -->
 
@@ -262,7 +392,7 @@
 
     <!-- blog -->
 
-    <div class="container blog">
+    <!-- <div class="container blog">
       <div class="row">
         <div class="col-md-12"><h2>Our Points of View …</h2></div>
       </div>
@@ -295,113 +425,9 @@
           </div>
         </div>
       </div>
-    </div>
-
-    <!-- mission -->
-
-    <div class="mission">
-      <div class="container">
-        <div class="row center-xs">
-          <div class="col-md-7">
-            <h2>Community Trust</h2>
-            <p>
-              Aliqua minim adipisicing eu nostrud excepteur duis culpa proident
-              eiusmod irure. Laborum officia in laborum ut dolore elit tempor.
-              Enim ullamco commodo nostrud incididunt sunt cillum officia.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- auto slider -->
-
-    <div class="auto-slider-container">
-      <div class="container">
-        <div class="row auto-slider animatable fadeInUp">
-          <div class="col-md-12 item">
-            <img src="slider1.jpg" />
-          </div>
-          <div class="col-md-12 item">
-            <img src="slider2.png" />
-          </div>
-          <div class="col-md-12 item">
-            <img src="slider3.jpg" />
-          </div>
-          <div class="col-md-12 item">
-            <img src="slide4.png" />
-          </div>
-          <div class="col-md-12 item">
-            <img src="slide4.png" />
-          </div>
-          <div class="col-md-12 item">
-            <img src="slide4.png" />
-          </div>
-        </div>
-      </div>
-    </div>
+    </div> -->
 
     <!-- features -->
-    <div class="features">
-      <div class="container">
-        <div class="row">
-          <div class="col col-md-5">
-            <h3>Meeting customer expectations</h3>
-            <p>
-              Looking for a version that also reverses the animation when
-              elements scroll below the fold again? Looking for a version that
-              also reverses the animation when elements scroll below the
-              animation when elements the fold again.
-            </p>
-          </div>
-          <div class="col col-md-5 col-md-offset-2">
-            <h3>Meeting customer expectations</h3>
-            <p>
-              Looking for a version that also reverses the animation when
-              elements scroll below the fold again? Looking for a version that
-              also reverses the animation when elements scroll below the
-              animation when elements the fold again.
-            </p>
-          </div>
-          <div class="col col-md-5">
-            <h3>Meeting customer expectations</h3>
-            <p>
-              Looking for a version that also reverses the animation when
-              elements scroll below the fold again? Looking for a version that
-              also reverses the animation when elements scroll below the
-              animation when elements the fold again.
-            </p>
-          </div>
-          <div class="col col-md-5 col-md-offset-2">
-            <h3>Meeting customer expectations</h3>
-            <p>
-              Looking for a version that also reverses the animation when
-              elements scroll below the fold again? Looking for a version that
-              also reverses the animation when elements scroll below the
-              animation when elements the fold again.
-            </p>
-          </div>
-          <div class="col col-md-5">
-            <h3>Meeting customer expectations</h3>
-            <p>
-              Looking for a version that also reverses the animation when
-              elements scroll below the fold again? Looking for a version that
-              also reverses the animation when elements scroll below the
-              animation when elements the fold again.
-            </p>
-          </div>
-          <div class="col col-md-5 col-md-offset-2">
-            <h3>Meeting customer expectations</h3>
-            <p>
-              Looking for a version that also reverses the animation when
-              elements scroll below the fold again? Looking for a version that
-              also reverses the animation when elements scroll below the
-              animation when elements the fold again.
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <!-- thin banner -->
 
@@ -410,42 +436,21 @@
         <div class="row row middle-xs">
           <div class="col-md-6">
             <div class="box">
-              <h3>Book your FREE 30-minute consultation</h3>
+              <h5>Are you in a difficult situation?</h5>
               <p>
-                Let's talk! We'd love to learn more about your business and
-                explore how we can help you implement a game-changing CRM.
+                Nulla in non laboris ea aliquip et eu exercitation ut quis
+                nostrud quis voluptate. Occaecat aliquip nisi amet ipsum amet
+                irure tempor commodo nostrud pariatur mollit enim. Pariatur
+                reprehenderit sit nis.
               </p>
             </div>
           </div>
 
           <div class="col-md-6 end-xs">
             <div class="box">
-              <button>
-                Book a FREE Consultation
-                <i class="fa-solid fa-chevron-right"></i>
-              </button>
+              <button>Get in touch</button>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="row middle-xs">
-        <div class="col-md-6">
-          <h2>Our CRM Solutions</h2>
-          <p>
-            As an independent advisor, we’re not tied to any single CRM
-            supplier.
-          </p>
-          <p>
-            Instead, we’ve hand-picked industry leading vendors who we believe
-            offer ‘best value’ platform solutions to SMEs, including Zoho,
-            Creatio, HubSpot, Microsoft Dynamics, Odoo and Freshworks.
-          </p>
-          <button>Learn more <i class="fa-solid fa-chevron-right"></i></button>
-        </div>
-        <div class="col-md-6 end-xs">
-          <img src="https://dummyimage.com/400x500/fff/aaa" />
         </div>
       </div>
     </div>
