--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         </div>
       </div>
 
-      <div class="container">
+      <div class="container second-section">
         <div class="row middle-xs">
           <div class="col-md-6">
             <h2>What we do</h2>
@@ -309,13 +309,13 @@
       <div class="slider-container">
         <div class="container">
           <div class="row between-xs bottom-xs">
-            <div class="col-md-9">
-              <h2>What our customers say</h2>
+            <div class="col-md-7">
+              <h2>Our clients say...</h2>
             </div>
-            <div class="col-md-3 end-xs">
-              <div>
-                <span class="prev"><i class="fa fa-arrow-left-long"></i></span>
-                <span class="next"><i class="fa fa-arrow-right-long"></i></span>
+            <div class="col-md-5 end-xs">
+              <div class="slider-container__arrows">
+                <div class="prev"><i class="fa fa-arrow-left-long"></i></div>
+                <div class="next"><i class="fa fa-arrow-right-long"></i></div>
               </div>
             </div>
           </div>
@@ -326,6 +326,51 @@
             <div class="col-md-12 item">
               <div class="slider-container__details slider-container__overlay">
                 <div>
+                  <img src="quotes2.png" />
+                  <p>
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua onsectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua"
+                  </p>
+                </div>
+                <div class="footer">
+                  <div>brand</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-12 item">
+              <div class="slider-container__details slider-container__overlay">
+                <div>
+                  <p>
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-12 item">
+              <div class="slider-container__details slider-container__overlay">
+                <div>
+                  <p>
+                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+                    sed do eiusmod tempor incididunt ut labore et dolore magna
+                    aliqua.
+                  </p>
+                </div>
+                <div class="footer">
+                  <div>client</div>
+                  <div>brand</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-12 item">
+              <div class="slider-container__details slider-container__overlay">
+                <div>
                   <p>
                     "Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna
@@ -368,31 +413,6 @@
                   <div>client</div>
                   <div>brand</div>
                 </div>
-              </div>
-            </div>
-            <div class="col-md-12 item">
-              <div class="slider-container__overlay">
-                <div class="slider-container__details">1gdsf</div>
-              </div>
-            </div>
-            <div class="col-md-12 item">
-              <div class="slider-container__overlay">
-                <div class="slider-container__details">1gdsf</div>
-              </div>
-            </div>
-            <div class="col-md-12 item">
-              <div class="slider-container__overlay">
-                <div class="slider-container__details">1gdsf</div>
-              </div>
-            </div>
-            <div class="col-md-12 item">
-              <div class="slider-container__overlay">
-                <div class="slider-container__details">1gdsf</div>
-              </div>
-            </div>
-            <div class="col-md-12 item">
-              <div class="slider-container__overlay">
-                <div class="slider-container__details">1gdsf</div>
               </div>
             </div>
           </div>
@@ -441,12 +461,12 @@
 
     <!-- thin banner -->
 
-    <div class="CTA-thin-banner">
+    <!-- <div class="CTA-thin-banner">
       <div class="container">
         <div class="row row middle-xs">
-          <div class="col-md-6">
+          <div class="col-md-7">
             <div class="box">
-              <h5>Are you in a difficult situation?</h5>
+              <h2>Need help?</h2>
               <p>
                 Nulla in non laboris ea aliquip et eu exercitation ut quis
                 nostrud quis voluptate. Occaecat aliquip nisi amet ipsum amet
@@ -456,16 +476,16 @@
             </div>
           </div>
 
-          <div class="col-md-6 end-xs">
+          <div class="col-md-5 end-xs">
             <div class="box">
               <button>Get in touch</button>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
-    <div class="container">
+    <!-- <div class="container">
       <div class="row middle-xs">
         <div class="col-md-6 last-xs">
           <img src="https://dummyimage.com/400x500/fff/aaa" />
@@ -502,47 +522,36 @@
           </button>
         </div>
       </div>
-    </div>
+    </div> -->
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-md-12"><h2>zedConsulting</h2></div>
+          <div class="col-xs-12"><img src="lapis-logo-light.png" /></div>
         </div>
         <div class="row">
-          <div class="col-md-4">
-            <p>
-              Independent CRM consulting and applications solutions provider to
-              small and mid-sized organisations (SME's)
+          <div class="col-xs-12 col-md-4 p">
+            <p class="info">
+              Eu enim deserunt tempor magna deserunt enim ea qui. Nisi ipsum
+              proident dolore cillum exercitation ea fugiat ea voluptate aliqua
+              ut.
             </p>
-
+          </div>
+          <div class="col-xs-12 col-md-2 col-md-offset-2 p2">
+            <div class="link"><a href="home.html">Home</a></div>
+            <div class="link"><a href="trips.html">Trips</a></div>
+            <div class="link"><a href="kayaking.html">Kayaking</a></div>
+            <div class="link"><a href="cycling.html">Cycling</a></div>
+            <div class="link"><a href="contact.html">Contact</a></div>
+          </div>
+          <div class="col-xs-12 col-md-3 col-md-offset-1 p">
             <p class="small">
-              ZED Consulting is a trading name for ZED GROUP LTD.<br />
-              Company Number: 11131409<br />
-              ICO Number: ZB065633
+              Exxplore UK <br />20-22 Upper Road Road<br />
+              London <br />E13 0EX
             </p>
-          </div>
-          <div class="col-md-2 col-md-offset-2">
-            <div class="link"><a href="">Home</a></div>
-            <div class="link"><a href="">Home</a></div>
-            <div class="link"><a href="">Home</a></div>
-            <div class="link"><a href="">Home</a></div>
-            <div class="link"><a href="">Home</a></div>
-            <div class="link"><a href="">Home</a></div>
-          </div>
-          <div class="col-md-3 col-md-offset-1">
-            Zed Consulting <br />20-22 Wenlock Road<br />
-            London <br />N1 7GU
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            © Zed Group Ltd 2021. All rights reserved. Privacy Policy Cookie
-            Policy
           </div>
         </div>
       </div>
     </footer>
-    <div class="block animatable fadeInUp">fadeInUp</div>
   </body>
   <script
     src="https://code.jquery.com/jquery-3.6.0.min.js"
