--- a/index.html
+++ b/index.html
@@ -334,8 +334,8 @@
                     incididunt ut labore et dolore magna aliqua"
                   </p>
                 </div>
-                <div class="footer">
-                  <div>brand</div>
+                <div class="title">
+                  <p>Brand</p>
                 </div>
               </div>
             </div>
@@ -343,11 +343,16 @@
             <div class="col-md-12 item">
               <div class="slider-container__details slider-container__overlay">
                 <div>
+                  <img src="quotes2.png" />
                   <p>
                     "Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua.
+                    aliqua onsectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua"
                   </p>
+                </div>
+                <div class="title">
+                  <p>Stella</p>
                 </div>
               </div>
             </div>
@@ -355,15 +360,16 @@
             <div class="col-md-12 item">
               <div class="slider-container__details slider-container__overlay">
                 <div>
+                  <img src="quotes2.png" />
                   <p>
                     "Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua.
+                    aliqua onsectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua"
                   </p>
                 </div>
-                <div class="footer">
-                  <div>client</div>
-                  <div>brand</div>
+                <div class="title">
+                  <p>Adriana</p>
                 </div>
               </div>
             </div>
@@ -371,15 +377,16 @@
             <div class="col-md-12 item">
               <div class="slider-container__details slider-container__overlay">
                 <div>
+                  <img src="quotes2.png" />
                   <p>
                     "Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua.
+                    aliqua onsectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua"
                   </p>
                 </div>
-                <div class="footer">
-                  <div>client</div>
-                  <div>brand</div>
+                <div class="title">
+                  <p>Felix</p>
                 </div>
               </div>
             </div>
@@ -387,15 +394,16 @@
             <div class="col-md-12 item">
               <div class="slider-container__details slider-container__overlay">
                 <div>
+                  <img src="quotes2.png" />
                   <p>
                     "Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                     sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua.
+                    aliqua onsectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore et dolore magna aliqua"
                   </p>
                 </div>
-                <div class="footer">
-                  <div>client</div>
-                  <div>brand</div>
+                <div class="title">
+                  <p>John</p>
                 </div>
               </div>
             </div>
@@ -538,14 +546,17 @@
           </div>
           <div class="col-xs-12 col-md-2 col-md-offset-2 p2">
             <div class="link"><a href="home.html">Home</a></div>
-            <div class="link"><a href="trips.html">Trips</a></div>
-            <div class="link"><a href="kayaking.html">Kayaking</a></div>
-            <div class="link"><a href="cycling.html">Cycling</a></div>
-            <div class="link"><a href="contact.html">Contact</a></div>
+            <div class="link"><a href="trips.html">About Us</a></div>
+            <div class="link"><a href="kayaking.html">News</a></div>
+            <div class="link"><a href="cycling.html">Contact</a></div>
+            <div class="link"><a href="contact.html">Vacancy</a></div>
+            <div class="link">
+              <a href="contact.html">Client Referal Form</a>
+            </div>
           </div>
           <div class="col-xs-12 col-md-3 col-md-offset-1 p">
             <p class="small">
-              Exxplore UK <br />20-22 Upper Road Road<br />
+              Lapis <br />20-22 Street<br />
               London <br />E13 0EX
             </p>
           </div>
