--- a/index.html
+++ b/index.html
@@ -85,11 +85,41 @@
               <li><a href="">News</a></li>
               <li><a href="">Contact</a></li>
               <li><a href="">Vacancy's</a></li>
-              <li><a href="">Client Referal Form</a></li>
+              <li><a href="">Referal Form</a></li>
             </ul>
           </div>
         </div>
       </nav>
+      <div class="slider-overlay">
+        <div class="container">
+          <div class="row">
+            <div class="col-xs-6">
+              <h1>Lapis</h1>
+              <p class="animatable fadeInUp">
+                Low cost, open-ended specialist disability psychotherapy to
+                anyone with a physical disability or learning disability who
+                lives in London
+              </p>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="type-js">
+          <div class="hero__title">
+            <h1>Lapis</h1>
+          </div>
+        </div>
+        <p class="animatable fadeInUp">
+          Low cost, open-ended specialist disability psychotherapy to anyone
+          with a physical disability or learning disability who lives in London
+        </p>
+        <button class="animatable fadeInUp">Get in touch!</button> -->
+      </div>
+
+      <div class="row slider2">
+        <img src="adults.jpg" />
+        <img src="adults.jpg" />
+        <img src="adults.jpg" />
+      </div>
 
       <!-- header -->
       <!-- <div class="hero">
@@ -407,22 +437,6 @@
                 </div>
               </div>
             </div>
-
-            <div class="col-md-12 item">
-              <div class="slider-container__details slider-container__overlay">
-                <div>
-                  <p>
-                    "Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua.
-                  </p>
-                </div>
-                <div class="footer">
-                  <div>client</div>
-                  <div>brand</div>
-                </div>
-              </div>
-            </div>
           </div>
         </div>
       </div>
@@ -551,7 +565,7 @@
             <div class="link"><a href="cycling.html">Contact</a></div>
             <div class="link"><a href="contact.html">Vacancy</a></div>
             <div class="link">
-              <a href="contact.html">Client Referal Form</a>
+              <a href="contact.html">Referal Form</a>
             </div>
           </div>
           <div class="col-xs-12 col-md-3 col-md-offset-1 p">
@@ -643,4 +657,5 @@
   <script type="text/javascript" src="jquery/animations.js"></script>
   <script type="text/javascript" src="jquery/slider.js"></script>
   <script type="text/javascript" src="jquery/auto-slider.js"></script>
+  <script type="text/javascript" src="jquery/slider2.js"></script>
 </html>
