--- a/index.html
+++ b/index.html
@@ -91,6 +91,61 @@
         </div>
       </nav>
 
+      <div class="slider-overlay">
+        <div class="container">
+          <div class="row middle-xs">
+            <div class="col-xs-6">
+              <div class="slider-overlay__content">
+                <h2 style="color: white">Affordable Psychotheraphy</h2>
+                <p style="color: white; font-weight: 400" id="cookie-alert"></p>
+                <!-- <p class="animatable fadeInUp">
+                Low cost, open-ended specialist disability psychotherapy to
+                anyone with a physical disability or learning disability who
+                lives in London
+              </p> -->
+                <button>Contact us</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- <div class="type-js">
+          <div class="hero__title">
+            <h1>Lapis</h1>
+          </div>
+        </div>
+        <p class="animatable fadeInUp">
+          Low cost, open-ended specialist disability psychotherapy to anyone
+          with a physical disability or learning disability who lives in London
+        </p>
+        <button class="animatable fadeInUp">Get in touch!</button> -->
+      </div>
+
+      <div class="Modern-Slider">
+        <!-- Item -->
+        <div class="item">
+          <div class="img-fill">
+            <img src="adults.jpg" alt="" />
+            <div class="info"></div>
+          </div>
+        </div>
+        <!-- // Item -->
+        <!-- Item -->
+        <div class="item">
+          <div class="img-fill">
+            <img src="young-people.jpg" alt="" />
+            <div class="info"></div>
+          </div>
+        </div>
+        <!-- // Item -->
+        <!-- Item -->
+        <div class="item">
+          <div class="img-fill">
+            <img src="organisations.jpg" alt="" />
+            <div class="info"></div>
+          </div>
+        </div>
+      </div>
+
       <!-- header -->
       <!-- <div class="hero">
         <div class="container" style="padding: 5rem">
@@ -113,7 +168,7 @@
         </div>
       </div> -->
 
-      <div class="home-header hero">
+      <!-- <div class="home-header hero">
         <div class="hero__overlay">
           <div class="container" style="padding: 5rem">
             <div class="row center-xs">
@@ -133,11 +188,11 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
       <div class="container second-section">
         <div class="row middle-xs">
-          <div class="col-md-6">
+          <div class="col-md-6 animatable bounceInLeft">
             <h2>What we do</h2>
             <p>
               LAPIS provides specialist counselling and psychotherapy to people
@@ -150,7 +205,7 @@
             </p>
             <!-- <button class="secondary-bttn">About us</button> -->
           </div>
-          <div class="col-md-5 col-md-offset-1 end-xs">
+          <div class="col-md-5 col-md-offset-1 end-xs bounceInLeft">
             <img
               src="https://as1.ftcdn.net/v2/jpg/01/97/21/68/1000_F_197216881_9nHLLNvwQYPwKb4h6P7shwZon2bqAk1A.jpg"
             />
@@ -168,7 +223,7 @@
                 Community <br />
                 Involvement
               </h2>
-              <p>
+              <p class="animatable fadeInUp">
                 Aliqua minim adipisicing eu nostrud excepteur duis culpa
                 proident eiusmod irure. Laborum officia in laborum ut dolore
                 elit tempor. Enim ullamco commodo nostrud incididunt sunt cillum
@@ -183,7 +238,7 @@
 
       <div class="auto-slider-container">
         <div class="container">
-          <div class="row auto-slider animatable fadeInUp">
+          <div class="row auto-slider">
             <div class="col-md-12 item">
               <img src="slide.png" />
             </div>
@@ -242,7 +297,7 @@
           <div class="row">
             <div class="col col-md-5">
               <h3>Young People</h3>
-              <p class="">
+              <p class="animatable fadeInUp">
                 People affected by disability age 5-25 who suffer emotional
                 distress and are afraid of yet another stigma or are not able to
                 access mainstream counselling.
@@ -250,7 +305,7 @@
             </div>
             <div class="col col-md-5 col-md-offset-2">
               <h3>Adults</h3>
-              <p>
+              <p class="animatable fadeInUp">
                 All people affected by disability and physical or sensory
                 impairment. This includes: disabled people and those associated
                 with them, individuals, couples, families and groups.
@@ -258,7 +313,7 @@
             </div>
             <div class="col col-md-5">
               <h3>Organisations</h3>
-              <p>
+              <p class="animatable fadeInUp">
                 Voluntary and statutory organisations which offer services to
                 people affected by disability which need to deal with issues
                 such as stress, challenging behaviour and staff retention,
@@ -267,7 +322,7 @@
             </div>
             <div class="col col-md-5 col-md-offset-2">
               <h3>Disadvantaged groups</h3>
-              <p>
+              <p class="animatable fadeInUp">
                 Aliqua exercitation mollit magna cillum ullamco culpa
                 reprehenderit. Dolor ea consectetur minim nisi. Fugiat anim
                 nulla id qui consequat.
@@ -642,5 +697,7 @@
 
   <script type="text/javascript" src="jquery/animations.js"></script>
   <script type="text/javascript" src="jquery/slider.js"></script>
+  <script type="text/javascript" src="jquery/slider2.js"></script>
+
   <script type="text/javascript" src="jquery/auto-slider.js"></script>
 </html>
