--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
           </div>
         </div>
       </nav>
+      <div style="width: 100%; height: 80px"></div>
 
       <div class="slider-overlay">
         <div class="container">
@@ -192,17 +193,19 @@
 
       <div class="container second-section">
         <div class="row middle-xs">
-          <div class="col-md-6 animatable bounceInLeft">
+          <div class="col-md-6">
             <h2>What we do</h2>
-            <p>
-              LAPIS provides specialist counselling and psychotherapy to people
-              affected by disability and life changing health issues.
-            </p>
-            <p>
-              We help disabled people and their family members/carers who are
-              experiencing anxiety, depression, difficulties in relationships
-              and other psychological health problems.
-            </p>
+            <div class="animatable bounceInLeft">
+              <p>
+                LAPIS provides specialist counselling and psychotherapy to
+                people affected by disability and life changing health issues.
+              </p>
+              <p>
+                We help disabled people and their family members/carers who are
+                experiencing anxiety, depression, difficulties in relationships
+                and other psychological health problems.
+              </p>
+            </div>
             <!-- <button class="secondary-bttn">About us</button> -->
           </div>
           <div class="col-md-5 col-md-offset-1 end-xs bounceInLeft">
@@ -265,19 +268,19 @@
               <div class="col-xs-6 col-md-4 center-xs">
                 <div class="statistics__section">
                   <div class="statistics__number">12</div>
-                  <p>Years active</p>
+                  <p class="animatable fadeInUp">Years active</p>
                 </div>
               </div>
               <div class="col-xs-6 col-md-4 center-xs">
                 <div class="statistics__section">
                   <div class="statistics__number">200</div>
-                  <p>Clients helped</p>
+                  <p class="animatable fadeInUp">Clients helped</p>
                 </div>
               </div>
               <div class="col-xs-6 col-md-4 center-xs">
                 <div class="statistics__section">
                   <div class="statistics__number">20+</div>
-                  <p>Years of knowledge</p>
+                  <p class="animatable fadeInUp">Years of knowledge</p>
                 </div>
               </div>
             </div>
@@ -325,7 +328,8 @@
               <p class="animatable fadeInUp">
                 Aliqua exercitation mollit magna cillum ullamco culpa
                 reprehenderit. Dolor ea consectetur minim nisi. Fugiat anim
-                nulla id qui consequat.
+                nulla id qui consequat.Aliqua exercitation mollit magna cillum
+                ullamco culpa reprehenderit. Dolor ea consectetur minim nisi.
               </p>
             </div>
           </div>
