--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="slider-overlay">
         <div class="container">
           <div class="row middle-xs">
-            <div class="col-xs-6">
+            <div class="col-xs-6 middle-xs">
               <div class="slider-overlay__content">
                 <h2 style="color: white">Affordable Psychotheraphy</h2>
                 <p style="color: white; font-weight: 400" id="cookie-alert"></p>
@@ -704,4 +704,5 @@
   <script type="text/javascript" src="jquery/slider2.js"></script>
 
   <script type="text/javascript" src="jquery/auto-slider.js"></script>
+  <script type="text/javascript" src="jquery/dynamic-text.js"></script>
 </html>
