--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
                     <h1 class="text-js">Lapis</h1>
                   </div>
                 </div>
-                <p class="animatable fadeInUp">
+                <p class="animatable2 fadeInUp2">
                   Low cost, open-ended specialist disability psychotherapy to
                   anyone with a physical disability or learning disability who
                   lives in London
                 </p>
-                <button class="animatable fadeInUp">Get in touch!</button>
+                <button class="animatable2 fadeInUp2">Get in touch!</button>
               </div>
             </div>
           </div>
@@ -139,15 +139,17 @@
         <div class="row middle-xs">
           <div class="col-md-6">
             <h2>What we do</h2>
-            <p>
-              LAPIS provides specialist counselling and psychotherapy to people
-              affected by disability and life changing health issues.
-            </p>
-            <p>
-              We help disabled people and their family members/carers who are
-              experiencing anxiety, depression, difficulties in relationships
-              and other psychological health problems.
-            </p>
+            <div class="animatable bounceInLeft">
+              <p>
+                LAPIS provides specialist counselling and psychotherapy to
+                people affected by disability and life changing health issues.
+              </p>
+              <p>
+                We help disabled people and their family members/carers who are
+                experiencing anxiety, depression, difficulties in relationships
+                and other psychological health problems.
+              </p>
+            </div>
             <!-- <button class="secondary-bttn">About us</button> -->
           </div>
           <div class="col-md-5 col-md-offset-1 end-xs">
@@ -168,7 +170,7 @@
                 Community <br />
                 Involvement
               </h2>
-              <p>
+              <p class="animatable fadeInUp">
                 Aliqua minim adipisicing eu nostrud excepteur duis culpa
                 proident eiusmod irure. Laborum officia in laborum ut dolore
                 elit tempor. Enim ullamco commodo nostrud incididunt sunt cillum
@@ -183,7 +185,7 @@
 
       <div class="auto-slider-container">
         <div class="container">
-          <div class="row auto-slider animatable fadeInUp">
+          <div class="row auto-slider">
             <div class="col-md-12 item">
               <img src="slide.png" />
             </div>
@@ -210,19 +212,19 @@
               <div class="col-xs-6 col-md-4 center-xs">
                 <div class="statistics__section">
                   <div class="statistics__number">12</div>
-                  <p>Years active</p>
+                  <p class="animatable fadeInUp">Years active</p>
                 </div>
               </div>
               <div class="col-xs-6 col-md-4 center-xs">
                 <div class="statistics__section">
                   <div class="statistics__number">200</div>
-                  <p>Clients helped</p>
+                  <p class="animatable fadeInUp">Clients helped</p>
                 </div>
               </div>
               <div class="col-xs-6 col-md-4 center-xs">
                 <div class="statistics__section">
                   <div class="statistics__number">20+</div>
-                  <p>Years of knowledge</p>
+                  <p class="animatable fadeInUp">Years of knowledge</p>
                 </div>
               </div>
             </div>
@@ -242,7 +244,7 @@
           <div class="row">
             <div class="col col-md-5">
               <h3>Young People</h3>
-              <p class="">
+              <p class="animatable fadeInUp">
                 People affected by disability age 5-25 who suffer emotional
                 distress and are afraid of yet another stigma or are not able to
                 access mainstream counselling.
@@ -250,7 +252,7 @@
             </div>
             <div class="col col-md-5 col-md-offset-2">
               <h3>Adults</h3>
-              <p>
+              <p class="animatable fadeInUp">
                 All people affected by disability and physical or sensory
                 impairment. This includes: disabled people and those associated
                 with them, individuals, couples, families and groups.
@@ -258,7 +260,7 @@
             </div>
             <div class="col col-md-5">
               <h3>Organisations</h3>
-              <p>
+              <p class="animatable fadeInUp">
                 Voluntary and statutory organisations which offer services to
                 people affected by disability which need to deal with issues
                 such as stress, challenging behaviour and staff retention,
@@ -267,10 +269,11 @@
             </div>
             <div class="col col-md-5 col-md-offset-2">
               <h3>Disadvantaged groups</h3>
-              <p>
+              <p class="animatable fadeInUp">
                 Aliqua exercitation mollit magna cillum ullamco culpa
                 reprehenderit. Dolor ea consectetur minim nisi. Fugiat anim
-                nulla id qui consequat.
+                nulla id qui consequat. Dolor ea consectetur minim nisi. Fugiat
+                anim nulla id qui consequat.
               </p>
             </div>
           </div>
@@ -516,7 +519,7 @@
     <div class="CTA-banner">
       <div class="container">
         <div class="row center-xs">
-          <h2 class="CTA-banner__heading animatable fadeInUp">
+          <h2 class="CTA-banner__heading animatable2 fadeInUp2">
             Book a free 30-minute CRM consultation. No obligation.
           </h2>
 
