--- a/index.html
+++ b/index.html
@@ -193,9 +193,14 @@
 
       <div class="container second-section">
         <div class="row middle-xs">
-          <div class="col-md-6">
+          <div class="col-md-5 end-xs">
+            <img
+              src="https://as1.ftcdn.net/v2/jpg/01/97/21/68/1000_F_197216881_9nHLLNvwQYPwKb4h6P7shwZon2bqAk1A.jpg"
+            />
+          </div>
+          <div class="col-md-6 col-md-offset-1">
             <h2>What we do</h2>
-            <div class="animatable bounceInLeft">
+            <div class="animatable bounceInRight">
               <p>
                 LAPIS provides specialist counselling and psychotherapy to
                 people affected by disability and life changing health issues.
@@ -207,11 +212,6 @@
               </p>
             </div>
             <!-- <button class="secondary-bttn">About us</button> -->
-          </div>
-          <div class="col-md-5 col-md-offset-1 end-xs bounceInLeft">
-            <img
-              src="https://as1.ftcdn.net/v2/jpg/01/97/21/68/1000_F_197216881_9nHLLNvwQYPwKb4h6P7shwZon2bqAk1A.jpg"
-            />
           </div>
         </div>
       </div>
