--- a/index.html
+++ b/index.html
@@ -117,18 +117,14 @@
         <div class="hero__overlay">
           <div class="container" style="padding: 5rem">
             <div class="row center-xs">
-              <div class="col-md-7">
-                <div class="type-js">
-                  <div class="hero__title">
-                    <h1 class="text-js">Lapis</h1>
-                  </div>
-                </div>
-                <p class="animatable2 fadeInUp2">
+              <div class="col-md-9">
+                <h1>Lapis</h1>
+                <p>
                   Low cost, open-ended specialist disability psychotherapy to
                   anyone with a physical disability or learning disability who
                   lives in London
                 </p>
-                <button class="animatable2 fadeInUp2">Get in touch!</button>
+                <button>Get in touch!</button>
               </div>
             </div>
           </div>
